[YPUB-6700] clean code